[package]
name = "blockchain"
version = "0.1.0"
authors = ["visith kumarapperuma <visithr9@gmal.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.1.38"
serde_json = "*"
serde = "*"
serde_derive = "*"
sha2 = "0.7.0"
